modified:   index.js 	modified:   public/estilos/preset.css 	modified:   public/estilos/style.css 	modified:   public/index.html 	modified:   public/main.js 	modified:   public/preset.js 	new file:   temperatura.txt

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap">
     <title>Lm-35 con node JS</title>
   </head>
-  <body onload="actualizarReloj()" style="background-color: black; color: orangered;">
+  <body  style="background-color: black; color: orangered;">
     <button  id="boton-preset">Preset</button>
+    <button id="reconnect-btn">Reconectar Arduino</button>
+    <p id="status">Estado: Desconectado</p>
     
     <div class="container">
       <p class="titulo">Sensor de Temperatura Lm-35</p> 
