modified:   index.js 	modified:   public/error404.html 	modified:   public/estilos/preset.css 	modified:   public/estilos/style.css 	modified:   public/index.html 	modified:   public/main.js 	modified:   temperatura.txt

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>Lm-35 con node JS</title>
   </head>
   <body  style="background-color: black; color: orangered;">
-    <button  id="boton-preset">Preset</button>
+    <button  id="boton-preset">Configuración</button>
     <button id="reconnect-btn">Reconectar Arduino</button>
     <p id="status">Estado: Desconectado</p>
     
@@ -18,11 +18,11 @@
       <p class="titulo">Sensor de Temperatura Lm-35</p> 
       <p id="reloj"></p>
       <div class="card">
-        <h1 id="temperature">Error Arduino</h1>
+        <h1 id="temperature">closed &nbsp server &nbsp 😥</h1>
       </div>
     </div>
     
-    <script src="socket.io/socket.io.js" defer></script>
+    <script src="socket.io/socket.io.js" ></script>
     <script  src="main.js" defer></script>
   </body>
 </html>
