--- a/public/error404.html
+++ b/public/error404.html
@@ -13,7 +13,7 @@
   <body>
     <div class="error-container">
       <h1 class="error-message">error 404</h1>
-      <p class="texto-error">página no encontrada 😪</p>
+      <p class="texto-error">Port serial Arduino closed 😪</p>
       <a id="salir" href="./index.html">🏠HOME</a>
     </div>
     <script  src="./main.js"></script>
