modified:   index.js 	modified:   public/error404.html 	modified:   public/estilos/style.css 	modified:   public/main.js 	modified:   temperatura.txt

--- a/public/error404.html
+++ b/public/error404.html
@@ -12,7 +12,7 @@
   
   <body>
     <div class="error-container">
-      <h1 class="error-message">error 404</h1>
+      <h1 class="error-message">Port error</h1>
       <p class="texto-error">Port serial Arduino closed 😪</p>
       <a id="salir" href="./index.html">🏠HOME</a>
     </div>
