modified:   public/error404.html 	modified:   public/estilos/error404.css 	modified:   public/preset.html

--- a/public/error404.html
+++ b/public/error404.html
@@ -14,7 +14,7 @@
     <div class="error-container">
       <h1 class="error-message">Port error</h1>
       <p class="texto-error">Port serial Arduino closed 😪</p>
-      <a id="salir" href="./index.html">🏠HOME</a>
+      <a id="salir" href="./index.html"> 👍Volver</a>
     </div>
     <script  src="./main.js"></script>
   </body>
