--- a/public/preset.html
+++ b/public/preset.html
@@ -15,7 +15,7 @@
       <div>
         <label id="lbl-ff-de">🥶&nbsp de:&nbsp </label>
         <label id="lbl-ff-de-value"></label>
-        <input type="range" class="inputs" id="ff-de"  min="0" max="5" value="0">
+        <input type="range" class="inputs" id="ff-de"  min="0" max="5" value="0" style: >
     </div>
     <div>
       <label style="color:aqua">&nbsp a:&nbsp</label>
@@ -43,7 +43,7 @@
       <div>
         <label for="preset"> 🥵&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp >&nbsp&nbsp de: &nbsp</label>
         <label id="lbl-mayor-de"></label>
-        <input type="range" class="inputs" id="fs-mayor-de" min="30" value="30" max="45">
+        <input type="range" class="inputs" id="fs-mayor-de" min="30" value="30" max="45" style="width: 90%;">
       </div>
     </div>
     
