modified:   index.js 	modified:   public/estilos/preset.css 	modified:   public/main.js 	modified:   public/preset.html 	modified:   public/preset.js 	modified:   temperatura.txt

--- a/public/preset.html
+++ b/public/preset.html
@@ -15,12 +15,12 @@
       <div>
         <label id="lbl-ff-de">🥶&nbsp de:&nbsp </label>
         <label id="lbl-ff-de-value"></label>
-        <input type="range" class="inputs" id="ff-de"  min="0" max="5" value="0" style: >
+        <input type="range" class="inputs" id="ff-de"  min="0" max="5">
     </div>
     <div>
       <label style="color:aqua">&nbsp a:&nbsp</label>
       <label id="lbl-ff-a"></label>
-      <input type="range" class="inputs" id="ff-a" min="6" max="15" value="6">
+      <input type="range" class="inputs" id="ff-a" min="6" max="15" >
     </div>  
     </div>
     
@@ -28,13 +28,13 @@
       <div>  
         <label style="color:yellow">😎&nbsp de:&nbsp</label>
         <label id="lbl-fc-de" style="color:yellow"></label>
-        <input  type="range" class="inputs" id="fc-de" min="16" max="25" value="15">
+        <input  type="range" class="inputs" id="fc-de" min="16" max="25" >
       </div>
 
       <div>
         <label style="color:yellow">&nbsp a: &nbsp</label>
         <label id="lbl-fc-a"style="color:yellow" ></label>
-        <input style="color:yellow" type="range" class="inputs" id="fc-a" min="26" max="30"value="26">
+        <input style="color:yellow" type="range" class="inputs" id="fc-a" min="26" max="30">
       </div>
       
     </div>
