modified:   public/error404.html 	modified:   public/preset.html 	modified:   public/preset.js

--- a/public/error404.html
+++ b/public/error404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="/imagenes/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error 404</title>
+    <title>Error Arduino</title>
     <link rel="stylesheet" href="/estilos/error404.css">
     <link rel="shortcut icon" sizes="64x64" type="image/svg" href="./imagenes/logo.svg" />
   </head>
@@ -13,7 +13,7 @@
   <body>
     <div class="error-container">
       <h1 class="error-message">Port error</h1>
-      <p class="texto-error">Port serial Arduino closed 😪</p>
+      <p class="texto-error">Arduino desconectado. 😪</p>
       <a id="salir" href="./index.html"> 👍Volver</a>
     </div>
     <script  src="./main.js"></script>
