modified:   index.js 	modified:   public/error404.html 	modified:   public/estilos/error404.css 	modified:   public/estilos/style.css 	modified:   public/imagenes/fondo.jpg 	modified:   public/index.html 	modified:   public/main.js 	modified:   temperatura.txt

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap">
     <title>Lm-35 con node JS</title>
   </head>
-  <body  style="background-color: black; color: orangered;">
+  <body  style="background-color: #020630; color: orangered;">
     <button  id="boton-preset">Configuración</button>
     <button id="reconnect-btn">Reconectar Arduino</button>
     <p id="status">Estado: Desconectado</p>
@@ -18,7 +18,7 @@
       <p class="titulo">Sensor de Temperatura Lm-35</p> 
       <p id="reloj"></p>
       <div class="card">
-        <h1 id="temperature">Server &nbsp closed &nbsp 😥</h1>
+        <h1 id="temperature">Server &nbsp closed &nbsp 💻😥</h1>
       </div>
     </div>
     
