--- a/public/error404.html
+++ b/public/error404.html
@@ -14,6 +14,7 @@
     <div class="error-container">
       <h1 class="error-message">Port error</h1>
       <p class="texto-error">Arduino desconectado. 😪</p>
+      <P> revise su conexion USB de Arduino</P>
       <a id="salir" href="./index.html"> 👍Volver</a>
     </div>
     <script  src="./main.js"></script>
