new file:   SENSOR-LM35.pdf 	modified:   public/index.html 	modified:   public/main.js 	new file:   public/weadther.html

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       <p class="titulo">Sensor de Temperatura Lm-35</p> 
       <p id="reloj"></p>
       <div class="card">
-        <h1 id="temperature">Server &nbsp closed &nbsp 💻😥</h1>
+        <h1 id="temperature">Server &nbsp on &nbsp 💻</h1>
       </div>
     </div>
     
