modified:   index.js 	modified:   public/estilos/style.css 	new file:   public/estilos/weather.css 	deleted:    public/imagenes/error-puerto.PNG 	modified:   public/index.html 	modified:   public/main.js 	deleted:    public/weadther.html 	new file:   public/weather.html 	new file:   public/weather.js

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <body  style="background-color: #020630; color: orangered;">
     <button  id="boton-preset">Configuración</button>
     <button id="reconnect-btn">Reconectar Arduino</button>
+    <button id="btn-exterior">Temp-exterior</button>
     <p id="status">Estado: Desconectado</p>
     
     <div class="container">
@@ -24,5 +25,6 @@
     
     <script src="socket.io/socket.io.js" ></script>
     <script  src="main.js" defer></script>
+    <script src="./weather.js"></script>
   </body>
 </html>
