--- a/public/weather.html
+++ b/public/weather.html
@@ -10,13 +10,13 @@
 <body>
 <div class="container">  
   <div class="titulo">
-    <h1>Estación metereologica externa desde API Visual Crossing <span id="internet">📶</span> </h1>
+    <h1>Estación metereologica externa  API Visual Crossing <span id="internet">&nbsp&nbsp&nbsp📶</span> </h1>
   </div>
   <div class="btn-inp">
     <input type="text" id="cityInput" placeholder="Ingresa el nombre de la ciudad">
     <button onclick="getTemperature()">Obtener Temperatura</button>
   </div>
-<div class="parrafos">
+  <div class="parrafos">
     <p id="result"></p>
     <p id="humedad"></p>
     <p id="latitud"></p>
