--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <title>Lm-35 con node JS</title>
   </head>
   <body  style="background-color: #020630; color: orangered;">
-    <button  id="boton-preset">Configuración</button>
-    <button id="reconnect-btn">Reconectar Arduino</button>
+    <button  id="btn-preset">Configuración</button>
+    <button id="btn-reconnect">Reconectar Arduino</button>
     <button id="btn-exterior">Temp-exterior</button>
     <p id="status">Estado: Desconectado</p>
     
