modified:   public/main.js 	modified:   public/weather.html 	modified:   public/weather.js

--- a/public/weather.html
+++ b/public/weather.html
@@ -24,7 +24,7 @@
     <p id="zona-horaria"></p>
   </div>    
 </div>  
-  <script  src="./weather.js"></script>
-  <script  src="./main.js"></script>
+  <script  src="./weather.js" defer></script>
+  <script  src="./main.js" defer></script>
 </body>
 </html>
