modified:   index.js 	modified:   public/estilos/preset.css 	modified:   public/estilos/style.css 	modified:   public/index.html 	modified:   public/main.js 	modified:   temperatura.txt

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap">
     <title>Lm-35 con node JS</title>
   </head>
-  <body  style="background-color: #020630; color: orangered;">
+  <body  style="background-color: #010318; color: #ffe600;">
     <button  id="btn-preset">Configuración</button>
     <button id="btn-reconnect">Reconectar Arduino</button>
     <button id="btn-exterior">Temp-exterior</button>
