modificacion pagina weadher

--- a/public/error404.html
+++ b/public/error404.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="/imagenes/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error Arduino</title>
+    <title>Error 404</title>
     <link rel="stylesheet" href="/estilos/error404.css">
     <link rel="shortcut icon" sizes="64x64" type="image/svg" href="./imagenes/logo.svg" />
   </head>
   
   <body>
     <div class="error-container">
-      <h1 class="error-message">Port error</h1>
-      <p class="texto-error">Arduino desconectado. 😪</p>
-      <P> revise su conexion USB de Arduino</P>
-      <a id="salir" href="./index.html"> 👍Volver</a>
+      <h1 class="error-message">error 404</h1>
+      <p class="texto-error">página no encontrada 😪</p>
+      <a id="salir" href="./index.html">🏠HOME</a>
     </div>
     <script  src="./main.js"></script>
   </body>
