implementado boton mapa en weather.html y weather.js y ruta en index.js

--- a/public/error404.html
+++ b/public/error404.html
@@ -13,8 +13,8 @@
   <body>
     <div class="error-container">
       <h1 class="error-message">error 404</h1>
-      <p class="texto-error">página no encontrada 😪</p>
-      <a id="salir" href="./index.html">🏠HOME</a>
+      <p class="texto-error">USB desconectado 😪</p>
+      <a id="salir" href="./index.html">🏠restablecer conexion USB</a>
     </div>
     <script  src="./main.js"></script>
   </body>
