--- a/public/weather.html
+++ b/public/weather.html
@@ -15,6 +15,7 @@
   <div class="btn-inp">
     <input type="text" id="cityInput" placeholder="Ingresa el nombre de la ciudad">
     <button onclick="getTemperature()">Obtener Temperatura</button>
+    <button id="mapa">mapa</button>
   </div>
   <div class="parrafos">
     <p id="result"></p>
